# persian-rs

./: README.md
persian-rs/: Cargo.toml
persian-rs/src/: jalali.rs  lib.rs  validation.rs
persian-rs_tester/: Cargo.toml
persian-rs_tester/src/: main.rs
