[package]
name = "persian-rs"
version = "0.1.0"
authors = ["esmaeil asadi <nullerror@duck.com>"]
edition = "2021"
description = "A comprehensive and lightweight utility library for Persian (Farsi) developers using Rust, featuring Jalali (Shamsi) date conversion and validation for Iranian national IDs and bank card numbers."
license = "MIT"
repository = "https://github.com/Null-Err0r/persian-rs"
keywords = ["persian", "farsi", "jalali", "shamsi", "validation"]
categories = ["date-and-time", "localization", "algorithms"]



[dependencies]
chrono = "0.4"

